// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductDescriptionListTableV2 Snapshot Testing matches snapshot with basic structure 1`] = `
.emotion-0 {
  margin: 20px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0px;
}

.emotion-1 {
  border: 1px solid #DCDCDC;
  background-color: #F6F6F6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 24px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 20px;
}

@media (min-width: 480px) {
  .emotion-1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    gap: 16px;
    padding: 0px 16px;
  }
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 32px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (min-width: 480px) {
  .emotion-2 {
    padding: 20px 0;
    gap: 16px;
  }
}

.emotion-3 {
  width: auto;
}

@media (min-width: 480px) {
  .emotion-3 {
    width: 184px;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
}

.emotion-5 {
  font-family: GuardianTextSans,"Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  font-size: 0.875rem;
  line-height: 1.3;
  font-weight: 400;
  font-style: normal;
  --source-text-decoration-thickness: 2px;
  color: #121212;
}

.emotion-6 {
  font-family: GuardianTextSans,"Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  font-size: 1.25rem;
  line-height: 1.3;
  font-weight: 700;
  font-style: normal;
  --source-text-decoration-thickness: 3px;
  color: #121212;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 12px;
}

.emotion-12 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  width: 100%;
}

.emotion-14 {
  font-family: GuardianTextSans,"Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  font-size: 0.9375rem;
  line-height: 1.3;
  font-weight: 400;
  font-style: normal;
  --source-text-decoration-thickness: 2px;
  color: #0077B6;
}

<div>
  <div
    aria-label="Product details"
    class="emotion-0"
    role="region"
  >
    <div
      class="emotion-1"
      role="group"
    >
      <div
        class="content-tiles emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              Date
            </div>
            <div
              class="emotion-6"
            >
              31 Dec 2025
            </div>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              Amount
            </div>
            <div
              class="emotion-6"
            >
              £10.00
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="Actions"
        class="action-buttons emotion-11"
        role="group"
      >
        <div
          class="emotion-12"
        >
          <div
            class="emotion-13"
          >
            <a
              href="/update"
            >
              Update
            </a>
          </div>
          <div
            class="emotion-14"
          >
            Save £5
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductDescriptionListTableV2 Snapshot Testing matches snapshot with multiple rows separated 1`] = `
.emotion-0 {
  margin: 20px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.emotion-1 {
  border: 1px solid #DCDCDC;
  background-color: #F6F6F6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 24px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 20px;
}

@media (min-width: 480px) {
  .emotion-1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    gap: 16px;
    padding: 0px 16px;
  }
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 32px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (min-width: 480px) {
  .emotion-2 {
    padding: 20px 0;
    gap: 16px;
  }
}

.emotion-3 {
  width: auto;
}

@media (min-width: 480px) {
  .emotion-3 {
    width: 184px;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
}

.emotion-5 {
  font-family: GuardianTextSans,"Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  font-size: 0.875rem;
  line-height: 1.3;
  font-weight: 400;
  font-style: normal;
  --source-text-decoration-thickness: 2px;
  color: #121212;
}

.emotion-6 {
  font-family: GuardianTextSans,"Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  font-size: 1.25rem;
  line-height: 1.3;
  font-weight: 700;
  font-style: normal;
  --source-text-decoration-thickness: 3px;
  color: #121212;
}

<div>
  <div
    aria-label="Product details"
    class="emotion-0"
    role="region"
  >
    <div
      class="emotion-1"
      role="group"
    >
      <div
        class="content-tiles emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              Row 1
            </div>
            <div
              class="emotion-6"
            >
              Value 1
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-1"
      role="group"
    >
      <div
        class="content-tiles emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              Row 2
            </div>
            <div
              class="emotion-6"
            >
              Value 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
